<resources>
    <string name="app_name">NewsApi App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dmitry Ovsyanyk</string>
    <string name="nav_header_subtitle">dima.ovsyanyk@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_news">News</string>
    <string name="menu_sources">Sources</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_log_off">Log off</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="check_e_mail_verification">Check E-mail Verification</string>
    <string name="sign_in">Sign in</string>
    <string name="registration">Registration</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="invalid_pass">Invalid password</string>
    <string name="need_verification">Need e-mail verification</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="telephone_number">Telephone number</string>
    <string name="register">Register</string>
    <string name="article_image">Article image</string>
    <string name="weather_image">weather image</string>
    <string name="last_updated">Last updated</string>
    <string name="temperature">Temperature</string>
    <string name="feels_like">Feels like</string>
    <string name="wind_direction">Wind direction</string>
    <string name="wind_speed">Wind speed</string>
    <string name="km_hour">km/hour</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="km">km</string>
    <string name="precipitation">Precipitation</string>
    <string name="mm">mm</string>
    <string name="wind">Wind</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="birthday">Birthday</string>
    <string name="birthday_dd_mm_yyyy">Birthday dd.mm.yyyy</string>
    <string name="save_changes">Save Changes</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>

    <string-array name="countries">
        <item>Ukraine</item>
        <item>Poland</item>
        <item>Germany</item>
    </string-array>

    <string-array name="Ukraine">
        <item>Kyiv</item>
        <item>Kharkiv</item>
        <item>Dnipro</item>
        <item>Lviv</item>
    </string-array>

    <string-array name="Poland">
        <item>Warsaw</item>
        <item>Krakow</item>
        <item>Lodz</item>
        <item>Poznan</item>
    </string-array>

    <string-array name="Germany">
        <item>Berlin</item>
        <item>Munich</item>
        <item>Cologne</item>
        <item>Hamburg</item>
    </string-array>




</resources>
