<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_sources"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_sources" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_log_off" />
    </group>

</menu>
